gateway/config/samples/gateway_v1_gateway.yaml
# Copyright 2025 Deutsche Telekom IT GmbH
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.cp.ei.telekom.de/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/managed-by: kustomize
    cp.ei.telekom.de/environment: default
  name: gateway-sample
spec:
  admin:
    url: your-admin-url
    clientId: <admin>
    clientSecret: <admin-secret>
    issuerUrl: <issuer-url>
  issuerUrl: https://this.is.a.gateway.regular.issuer/auth/realms/rover
  url: https://stargate-somewhere.telekom.com
