gateway/config/samples/gateway_v1_route.yaml
# Copyright 2025 Deutsche Telekom IT GmbH
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.cp.ei.telekom.de/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/managed-by: kustomize
    gateway: gateway-sample
    path: foo-v1
    cp.ei.telekom.de/environment: default
  name: route-sample
spec:
  gateway:
    name: gateway-sample
    namespace: default
  upstreams:
  - scheme: https
    host: httpbin.org
    port: 0
    path: /
  downstreams:
  - host: localhost
    port: 0
    path: /sample/route/v1
    issuer: some.issuer.iris.somewhere.de
